Updates: Bug fixes

--- a/Demo_2_Langgraph_Fundamentals.ipynb
+++ b/Demo_2_Langgraph_Fundamentals.ipynb
@@ -125,7 +125,55 @@
    "id": "04f82297",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "@tool\n",
+    "def get_time_off_balance(user_id: str) -> int:\n",
+    "    '''\n",
+    "    Get the time off balance for a user. \n",
+    "\n",
+    "    Args :\n",
+    "        user_id: A unique string representing the user id\n",
+    "\n",
+    "    Returns:\n",
+    "        An integer value representing the time-off balance\n",
+    "    '''\n",
+    "    return 10\n",
+    "\n",
+    "@tool\n",
+    "def process_time_off(user_id: str, start_date: str, end_date: str) -> dict:\n",
+    "    '''\n",
+    "    Process time-off request for a user\n",
+    "\n",
+    "    Args :\n",
+    "        user_id: A unique string representing the user id\n",
+    "        start_date: A date string in YYYY-MM-DD format for the start date of the time-off request\n",
+    "        end_date: A date string in YYYY-MM-DD format for the end date of the time-off request\n",
+    "\n",
+    "    Returns:\n",
+    "        A dictionary with the following keys:\n",
+    "        - status: A string value representing the status of the time-off request\n",
+    "        - message: A string value representing the message of the time-off request\n",
+    "    '''\n",
+    "    start_date = datetime.strptime(start_date, \"%Y-%m-%d\")\n",
+    "    end_date = datetime.strptime(end_date, \"%Y-%m-%d\")\n",
+    "\n",
+    "    days_requested = end_date - start_date\n",
+    "    time_off_balance = get_time_off_balance.invoke({\"user_id\": user_id})\n",
+    "\n",
+    "    result = {}\n",
+    "\n",
+    "    if days_requested.days + 1 > time_off_balance:\n",
+    "        result['status'] = 'error'\n",
+    "        result['message'] = f'Time off request failed. you only have {time_off_balance} days of remaining leaves but requested {days_requested.days} days'\n",
+    "\n",
+    "    else:\n",
+    "        time_off_balance -= days_requested.days + 1\n",
+    "        result['status'] = 'success'\n",
+    "        result['message'] = f'Time off request processed successfully for {days_requested.days + 1} days. Your remaining time off balance is {time_off_balance}'\n",
+    "\n",
+    "\n",
+    "    return result"
+   ]
   },
   {
    "cell_type": "markdown",
